// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1000jours-blues: should return ml and pc 1`] = `
[
  {
    "declarationUrl": "https://1000jours-blues.fabrique.social.gouv.fr/mentions-legales",
    "maxScore": 4,
    "mention": "Mentions légales",
    "missingTrackers": [],
    "missingWords": [],
    "score": 4,
    "slug": "ml",
  },
  {
    "declarationUrl": "https://1000jours-blues.fabrique.social.gouv.fr/politique-confidentialite",
    "maxScore": 4,
    "mention": "Confidentialité",
    "missingTrackers": [],
    "missingWords": [
      "durée de la conservation (ou) durée de conservation",
    ],
    "score": 3,
    "slug": "pc",
  },
]
`;

exports[`beta: should return ml and pc 1`] = `
[
  {
    "declarationUrl": "https://beta.gouv.fr/apropos/",
    "maxScore": 4,
    "mention": "Mentions légales",
    "missingTrackers": [],
    "missingWords": [],
    "score": 4,
    "slug": "ml",
  },
  {
    "declarationUrl": "https://beta.gouv.fr/suivi/",
    "maxScore": 4,
    "mention": "Données personnelles",
    "missingTrackers": [],
    "missingWords": [
      "@",
      "finalité",
      "durée de la conservation (ou) durée de conservation",
      "sous-traitant (ou) sous traitant",
    ],
    "score": 0,
    "slug": "pc",
  },
]
`;

exports[`lba: should return ml and pc 1`] = `
[
  {
    "declarationUrl": "https://labonnealternance.apprentissage.beta.gouv.fr/mentions-legales",
    "maxScore": 4,
    "mention": "Mentions légales",
    "missingTrackers": [],
    "missingWords": [],
    "score": 4,
    "slug": "ml",
  },
  {
    "maxScore": 0,
    "mention": null,
    "missingTrackers": [],
    "missingWords": [],
    "score": 0,
    "slug": "pc",
  },
]
`;

exports[`should detect ml : mentions légales 1`] = `
[
  {
    "declarationUrl": "https://beta.gouv.fr/mentions",
    "maxScore": 4,
    "mention": "Mentions légales",
    "missingTrackers": [],
    "missingWords": [
      "directeur (ou) directrice",
      "publication",
      "hébergeur (ou) hébergement (ou) hebergeur (ou) hebergement",
      "éditeur (ou) édité par (ou) editeur (ou) edité par",
    ],
    "score": 0,
    "slug": "ml",
  },
  {
    "maxScore": 0,
    "mention": null,
    "missingTrackers": [],
    "missingWords": [],
    "score": 0,
    "slug": "pc",
  },
]
`;

exports[`should detect pc : Données personnelles 1`] = `
[
  {
    "maxScore": 0,
    "mention": null,
    "missingTrackers": [],
    "missingWords": [],
    "score": 0,
    "slug": "ml",
  },
  {
    "declarationUrl": "https://beta.gouv.fr/some",
    "maxScore": 4,
    "mention": "Données personnelles",
    "missingTrackers": [],
    "missingWords": [
      "@",
      "finalité",
      "durée de la conservation (ou) durée de conservation",
      "sous-traitant (ou) sous traitant",
    ],
    "score": 0,
    "slug": "pc",
  },
]
`;

exports[`should return ml and pc and thirdparties data 1`] = `
[
  {
    "declarationUrl": "https://beta.gouv.fr/apropos/",
    "maxScore": 4,
    "mention": "Mentions légales",
    "missingTrackers": [],
    "missingWords": [],
    "score": 4,
    "slug": "ml",
  },
  {
    "declarationUrl": "https://beta.gouv.fr/suivi/",
    "maxScore": 5,
    "mention": "Données personnelles",
    "missingTrackers": [
      "jQuery",
    ],
    "missingWords": [
      "@",
      "finalité",
      "durée de la conservation (ou) durée de conservation",
      "sous-traitant (ou) sous traitant",
    ],
    "score": 0,
    "slug": "pc",
  },
]
`;
